# rust_service

./: .gitignore  Cargo.toml  README.md  app_test.sh  log4rs.yaml
.github/workflows/: main.yml
migrations/: 20240926172737_create_order.sql
src/: cli.rs  db.rs  main.rs  model.rs
test/: vegeta_test.sh
